# inscription-multisig

./: .env  .gitignore  Cargo.toml  README.md  key.txt
src/: brc20.rs  lib.rs  main.rs  multi_wallet.rs  ord_client.rs  utils.rs
wallet_test/: db  snap.00000000000000BA  snap.000000000000014B  snap.0000000000000201  snap.00000000001876DE  snap.00000000001CF71A  snap.00000000002D32A8  snap.00000000002F4C7C  snap.0000000000319130  snap.0000000000361FB1  snap.0000000000363913  snap.000000000036396B  snap.000000000036783F  snap.0000000000367A67  snap.0000000000368E42  snap.00000000003E50F1  snap.00000000003E51EE
wallet_test1/: db  snap.00000000000D89BD
