[package]
name = "inscription-multisig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bdk = {version = "0.28.1", default-feature = true, features = ["all-keys", "key-value-db",  "rpc","keys-bip39","compiler"]}
bitcoin = "0.31.2"
dotenv = "0.15.0"


[lib]
name = "inscription_multisig"
path = "src/lib.rs"
