[package]
name = "inscription-multisig"
version = "0.1.25"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A m of n taproot multisig to manage inscription specificaly brc20"
repository = "https://github.com/OrangeBridge/inscription-multisig"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bdk = {version = "0.28.0", default-feature = true, features = ["all-keys", "key-value-db",  "rpc","keys-bip39","compiler","electrum"]}
bincode = "1.3.3"
ctrlc = "3.4.4"
dotenv = "0.15.0"
nix = { version = "0.28.0", features = ["signal"] }
ordinals = "0.0.7"
ping = "0.5.2"
reqwest = {version = "0.12.3" , features = ["json"]}
serde = "1.0.197"
tokio ={ version = "1.37.0", features = ["full"]}


[lib]
name = "inscription_multisig"
path = "src/lib.rs"
